Fix selector for fade truncation.
omeka/omeka-s#2164

--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -611,7 +611,7 @@ ul.resource-list .resource h4 {
     margin-top: 0;
 }
 
-.body-truncate-fade ul.resource-list .resource .description {
+.body-truncate-fadeout ul.resource-list .resource .description {
     max-height: 4 * $spacing-l;
     overflow: hidden;
     position: relative;
